chore: add docker support and change datebase
make the application running in docker and change the datebase from
Sqlite to Postgres. By setting the environment variables and running
the docker-compose, the application will create the database automatically.
The environment variables are POSTGRES_USER and POSTGRES_PASSWORD, you
can find them in https://registry.hub.docker.com/_/postgres.

--- a/Saleos/appsettings.json
+++ b/Saleos/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SaleosCore.db",
-    "IdentityConnection": "DataSource=SaleosIdentity.db"
+    "DefaultConnection": "Host=postgres;Port=5432;Database=SaleosCore;Username={0};Password={1}"
   },
   "Logging": {
     "LogLevel": {
