feat: make the editor can upload image
make the vditor can upload the image to backend
and the backend stores the image in minio

--- a/Saleos/appsettings.json
+++ b/Saleos/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=postgres;Port=5432;Database=SaleosCore;Username={0};Password={1}"
   },
+  "Minio": {
+    "endpoint": "minio:9000",
+    "accessKey": "minioadmin",
+    "security": "minioadmin",
+    "bucketName": "article"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
