refactor: rename Dto to DAO
rename DTO to DAO

--- a/Saleos.Entity/Saleos.Entity.csproj
+++ b/Saleos.Entity/Saleos.Entity.csproj
@@ -11,6 +11,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Saleos.DTO\Saleos.DTO.csproj" />
+      <ProjectReference Include="..\Saleos.DAO\Saleos.DAO.csproj" />
     </ItemGroup>
 </Project>
