--- a/Saleos.DAO/Saleos.DAO.csproj
+++ b/Saleos.DAO/Saleos.DAO.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>saleos.DTO</RootNamespace>
+        <RootNamespace>saleos.DAO</RootNamespace>
     </PropertyGroup>
 
 </Project>
