feat: add Docker Support
make Saleos Saleos.Admin can be launched in docker
add nginx config file and Dockerfile

--- a/Saleos.Admin/appsettings.json
+++ b/Saleos.Admin/appsettings.json
@@ -1,12 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=SaleosCore;Username={0};Password={1}"
-  },
-  "Minio": {
-    "endpoint": "localhost:9000",
-    "accessKey": "minioadmin",
-    "security": "minioadmin",
-    "bucketName": "article"
+    "DefaultConnection": "Host={0};Port={1};Database=SaleosCore;Username={2};Password={3}"
   },
   "Logging": {
     "LogLevel": {
