--- a/Saleos/appsettings.json
+++ b/Saleos/appsettings.json
@@ -1,12 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=SaleosCore;Username={0};Password={1}"
-  },
-  "Minio": {
-    "endpoint": "minio:9000",
-    "accessKey": "minioadmin",
-    "security": "minioadmin",
-    "bucketName": "article"
+    "DefaultConnection": "Host={0};Port={1};Database=SaleosCore;Username={2};Password={3}"
   },
   "Logging": {
     "LogLevel": {
