--- a/nginx/Saleos.conf
+++ b/nginx/Saleos.conf
@@ -1,8 +1,14 @@
 server {
-    listen: 80;
+    listen *:81;
     server_name www.Saleos.com;
     location / {
-        proxy_pass http://localhost:4000;
+        proxy_pass http://saleos_client:4000;
+        proxy_set_header HOST $host;
+        proxy_http_version 1.1;
+    }
+
+    location /api {
+        proxy_pass http://saleos/api;
         proxy_set_header HOST $host;
         proxy_http_version 1.1;
     }
