refact: make Client can only listen on 80 port
make Client can only listen on 80 port; this will make
user can't change the port by passing environment variable
when using docker-compose, this will also held the nginx config
file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     saleos_client:
         build: ./SaleosClient
         environment: 
-            - PORT=${SALEOS_CLIENT_PORT}
+            - PORT=80
         depends_on:
             - "saleos"
 
