--- a/nginx/Saleos.conf
+++ b/nginx/Saleos.conf
@@ -2,7 +2,7 @@ server {
     listen *:81;
     server_name www.Saleos.com;
     location / {
-        proxy_pass http://saleos_client:4000;
+        proxy_pass http://saleos_client;
         proxy_set_header HOST $host;
         proxy_http_version 1.1;
     }
