--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,9 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 max_line_length = 100
+
+[.py]
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
+max_line_length = 100
