feat: changed the minio config
the new minio has two ports, one is webserver and one is api interface

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,8 @@ host="localhost"
 
 [minio]
 host="localhost"
-port=9000
+endpoint_port=9000
+console_port=9001
 accesskey="minioadmin"
 security="minioadmin"
 bucketname="article"
