feat: save admin to database
save admin to database

--- a/config.toml
+++ b/config.toml
@@ -15,3 +15,7 @@ bucketname="article"
 [Saleos.Admin]
 # the host port which you could visited the admin page
 port=3232
+
+[Admin]
+Name="Saleos"
+Password="Saleos"
