--- a/Saleos.Admin/appsettings.json
+++ b/Saleos.Admin/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host={0};Port={1};Database=SaleosCore;Username={2};Password={3}"
+    "CoreConnection": "Host={0};Port={1};Database=SaleosCore;Username={2};Password={3}",
+    "IdentityConnection": "Host={0};Port={1};Database=SaleosIdentity;Username={2};Password={3}"
   },
   "Logging": {
     "LogLevel": {
